--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
 					<artifactId>spring-jdbc</artifactId>
 					<version>4.1.4.RELEASE</version>
 				</dependency>
+              <dependency>
+              <groupId>javax.servlet</groupId>
+              <artifactId>jstl</artifactId>
+              <version>1.2</version>
+              </dependency>
 
     </dependencies>
 
